# strip-master

./: README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: CutStripDevice2.language.settings.xml  WireStripper.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap  10.snap  13.snap  5.snap  9.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  10.tree  13.tree  14.tree  15.tree  4.tree  5.tree  9.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
CutStripDevice/: .cproject  .project  Display Test 02112025.ioc  Display Test 02112025.launch
CutStripDevice/Core/Inc/: main.h
CutStripDevice/Core/Src/: main.c  stm32f4xx_hal_msp.c
CutStripDevice/Core/User/Config/: DEV_Config.c
CutStripDevice/Core/User/Fonts/: font24CN.c
CutStripDevice/Core/User/GUI/: GUI_Paint.h
CutStripDevice/Debug/: Display Test 02112025.elf  Display Test 02112025.map  makefile
CutStripDevice/Debug/Core/Src/: main.cyclo  main.d  main.su
CutStripDevice2/: .cproject  .mxproject  .project  CutStripDevice2 Debug.launch  CutStripDevice2.ioc
CutStripDevice2/Application/Inc/Tasks/: task_display.h  task_watchdog.h
CutStripDevice2/Application/Src/Tasks/: task_display.c  task_watchdog.c
CutStripDevice2/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
CutStripDevice2/Core/Inc/Backup/: main.h.bak  stm32f4xx_it.h.bak
CutStripDevice2/Core/Src/: adc.c  gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c
CutStripDevice2/Core/Src/Backup/: adc.c.bak  freertos.c.bak  gpio.c.bak  i2c.c.bak  main.c.bak  spi.c.bak  stm32f4xx_hal_msp.c.bak  stm32f4xx_it.c.bak  tim.c.bak
CutStripDevice2/Core/User/Config/: Debug.h
CutStripDevice2/Core/User/Example/: OLED_2in42_test.c
CutStripDevice2/Core/User/GUI/: GUI_Paint.c
CutStripDevice2/Core/User/OLED/: OLED_2in42.h
CutStripDevice2/Debug/: CutStripDevice2.elf  CutStripDevice2.list  CutStripDevice2.map  Display Test 02112025.list  makefile  objects.list  sources.mk
CutStripDevice2/Debug/Core/Src/: adc.d  freertos.cyclo  (+18 more)
WireStripper/: .mxproject  CMakeLists.txt  STM32F446XX_FLASH.ld  WireStripper.ioc  arm-gcc--toolchain.cmake
WireStripper/Application/Inc/Services/: task_manager.h
WireStripper/Application/Inc/Tasks/: task_actuatorControl.h  task_safety.h  task_stateMachine.h
WireStripper/Application/Src/Services/: task_manager.c
WireStripper/Application/Src/Tasks/: task_actuatorControl.c  task_display.c  task_safety.c  task_stateMachine.c  task_watchdog.c
WireStripper/Core/Inc/: main.h
WireStripper/Core/Src/: freertos.c  gpio.c  i2c.c  spi.c  stm32f4xx_it.c
WireStripper/Core/Src/Backup/: adc.c.bak  freertos.c.bak  gpio.c.bak  main.c.bak  tim.c.bak  usb_otg.c.bak
WireStripper/Core/User/Config/: DEV_Config.c  DEV_Config.h
WireStripper/Core/User/Example/: OLED_2in42_test.c  test.h
WireStripper/Core/User/OLED/: OLED_2in42.c
WireStripper/cmake/stm32cubemx/: CMakeLists.txt
(+109 files in other folders)
